[gd_scene load_steps=14 format=3 uid="uid://cqiyvpwmi2l68"]

[ext_resource type="Script" path="res://src/player/player.gd" id="1_786lq"]
[ext_resource type="SpriteFrames" uid="uid://c6if7x4yomcft" path="res://asstes/visuals/a_little_less_stolen/jump_anim.tres" id="2_ipuhu"]
[ext_resource type="Script" path="res://src/player/center.gd" id="6_1gn0e"]
[ext_resource type="Texture2D" uid="uid://chdr2ulwoew6s" path="res://icon.svg" id="6_2ddam"]
[ext_resource type="Script" path="res://src/player/facing.gd" id="7_w1fsf"]
[ext_resource type="PackedScene" uid="uid://dv5yiyp4a1576" path="res://src/player/hearts.tscn" id="9_hwjwy"]
[ext_resource type="Script" path="res://src/player/StateHandlers/Movement/movement_state_handler.gd" id="10_bxfya"]
[ext_resource type="Script" path="res://src/player/StateHandlers/Movement/States/idle.gd" id="11_5vhf4"]
[ext_resource type="Script" path="res://src/player/StateHandlers/Movement/States/running.gd" id="12_3yuo7"]
[ext_resource type="Script" path="res://src/player/StateHandlers/Movement/States/jumping.gd" id="13_6qbk5"]
[ext_resource type="Script" path="res://src/player/StateHandlers/Movement/States/dashing.gd" id="14_s78xv"]
[ext_resource type="Script" path="res://src/player/StateHandlers/Movement/States/falling.gd" id="15_cwrr5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lhas0"]
size = Vector2(15, 46)

[node name="Player" type="CharacterBody2D"]
collision_mask = 6
script = ExtResource("1_786lq")
blinkCount = 3
g = Vector2(0, 3500)
acc = 2000.0
jump_velocity = -1900.0
knockbackDistance = 200
limits = Vector4(-200, 0, -200, 200)
glitchTimerLimits = Vector2(1, 1.5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2.5, 10)
shape = SubResource("RectangleShape2D_lhas0")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = ExtResource("2_ipuhu")
animation = &"jump"

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2.5, 2.5)
drag_horizontal_enabled = true
drag_vertical_enabled = true
drag_left_margin = 0.1
drag_top_margin = 0.1
drag_right_margin = 0.1
drag_bottom_margin = 0.1

[node name="DashTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 0.5
one_shot = true

[node name="DashTime" type="Timer" parent="."]
process_callback = 0
wait_time = 0.25
one_shot = true

[node name="Center" type="Node2D" parent="."]
visible = false
script = ExtResource("6_1gn0e")

[node name="Facing" type="Node2D" parent="Center"]
visible = false
position = Vector2(1, 0)
script = ExtResource("7_w1fsf")

[node name="Sprite2D" type="Sprite2D" parent="Center/Facing"]
visible = false
position = Vector2(200, 0)
texture = ExtResource("6_2ddam")

[node name="hearts" parent="." instance=ExtResource("9_hwjwy")]

[node name="DamageTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="AudioListener2D" type="AudioListener2D" parent="."]
current = true

[node name="GlitchTimer" type="Timer" parent="."]
one_shot = true

[node name="CoyoteTime" type="Timer" parent="."]
process_callback = 0
wait_time = 0.1
one_shot = true

[node name="MovementStateHandler" type="Node" parent="." node_paths=PackedStringArray("inital_state")]
script = ExtResource("10_bxfya")
inital_state = NodePath("Falling")

[node name="Idle" type="Node" parent="MovementStateHandler" node_paths=PackedStringArray("Falling", "Running", "Jumping", "Dashing")]
script = ExtResource("11_5vhf4")
Falling = NodePath("../Falling")
Running = NodePath("../Running")
Jumping = NodePath("../Jumping")
Dashing = NodePath("../Dashing")

[node name="Running" type="Node" parent="MovementStateHandler" node_paths=PackedStringArray("Idle", "Falling", "Jumping", "Dashing")]
script = ExtResource("12_3yuo7")
Idle = NodePath("../Idle")
Falling = NodePath("../Falling")
Jumping = NodePath("../Jumping")
Dashing = NodePath("../Dashing")

[node name="Jumping" type="Node" parent="MovementStateHandler" node_paths=PackedStringArray("Idle", "Running", "Dashing", "Falling")]
script = ExtResource("13_6qbk5")
Idle = NodePath("../Idle")
Running = NodePath("../Running")
Dashing = NodePath("../Dashing")
Falling = NodePath("../Falling")

[node name="Dashing" type="Node" parent="MovementStateHandler" node_paths=PackedStringArray("Idle", "Running", "Falling")]
script = ExtResource("14_s78xv")
Idle = NodePath("../Idle")
Running = NodePath("../Running")
Falling = NodePath("../Falling")

[node name="Falling" type="Node" parent="MovementStateHandler" node_paths=PackedStringArray("Idle", "Running", "Dashing")]
script = ExtResource("15_cwrr5")
Idle = NodePath("../Idle")
Running = NodePath("../Running")
Dashing = NodePath("../Dashing")

[connection signal="timeout" from="DashTimer" to="." method="_on_dash_timer_timeout"]
[connection signal="timeout" from="DashTime" to="." method="_on_dash_time_timeout"]
[connection signal="timeout" from="DashTime" to="MovementStateHandler/Dashing" method="_on_dash_time_timeout"]
[connection signal="flip" from="Center/Facing" to="." method="_on_flip"]
[connection signal="flip" from="Center/Facing" to="Center" method="_on_flip"]
[connection signal="timeout" from="DamageTimer" to="." method="_on_damage_timer_timeout"]
[connection signal="timeout" from="GlitchTimer" to="." method="_on_glitch_timer_timeout"]
[connection signal="timeout" from="CoyoteTime" to="." method="_on_coyote_time_timeout"]
